--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 [build-system]
 requires = [
     "setuptools",
-	"numpy",
+	"NumPy",
 ]
 build-backend = "setuptools.build_meta"
 
@@ -20,7 +20,7 @@ authors = [
 description = "A tool box for optical scalar diffraction"
 readme = "README.md"
 dependencies = [
-    'numpy>=1.15',
+    'NumPy>=1.15',
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
